# openfabric-ai-challenge

./: README.md  creative_memory.db  main.py  pyproject.toml  requirements_windows.txt  server.py  start.bat  test_memory.db  test_simple.py  web_ui.py
core/: __init__.py  llm_interface.py  memory.py  openfabric_integration.py  pipeline.py
outputs/models/: mock_model_20250628_214358_181898.glb  model_02ae5360.glb  model_0f8e5923.glb  model_34db198d.glb  model_4be83415.glb  model_646d7e2a.glb
